--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
 <title>열려라</title>
 <script type="text/javascript">
 window.onload = function(){
-// 	window.redirect = "http://localhost:8099/zhomepage/MainPage.html";
-	location.href="http://localhost:8099/zhomepage/MainPage.html";
+	location.href="./MainPage.html";
 }
 </script> 
 </head>
