--- a/MainPage.html
+++ b/MainPage.html
@@ -35,7 +35,7 @@
 								<li><a href="#">즐겨찾기</a></li>
 								<li><a href="#">주문</a></li>
 								<li><a href="#">계정</a></li>
-								<li><a target="_blank" href="http://localhost:8099/zhomepage/LoginPage.html">로그인</a></li>
+								<li><a target="_blank" href="./LoginPage.html">로그인</a></li>
 							</ul>
 						</div>
 					</li>
