--- a/LoginPage.html
+++ b/LoginPage.html
@@ -44,7 +44,7 @@
 						<a>Apple ID 또는 암호를 잊으셨나요?</a>
 					</div>
 					<div id="joinapple" >
-						<a target="_blank" href="http://localhost:8099/zhomepage/Join.html">Apple ID가 없으신가요? 지금 생성.</a>
+						<a target="_blank" href="./Join.html">Apple ID가 없으신가요? 지금 생성.</a>
 					</div>
 				</div>
 			</div>
