--- a/Join.html
+++ b/Join.html
@@ -35,7 +35,7 @@
 						<div id="subright">
 							<div>
 								<ul id="subnav">
-									<li><a href="http://localhost:8099/zhomepage/LoginPage.html">로그인</a></li>
+									<li><a href="./LoginPage.html">로그인</a></li>
 									<li><a>Apple ID 생성</a></li>
 									<li><a>FAQ</a></li>
 								</ul>
